syntax = "proto3";

package unitd;

option go_package='unitd';

service Unitd {
rpc Start (ConnInfo) returns (ConnInfo){}
rpc Stream (stream ConnInfo) returns (stream ConnInfo);

rpc Stop (Empty) returns (Empty){}
}

message Empty {
}

message ConnInfo {
bytes client_id=1;
//string network=2;
//string address=3;
}

message InMsg {
	oneof Message {
		ConnInfo  info = 1;
		Entry entry=2;
		Query query = 3;
		Sub sub = 4;
		Pub pub = 5;
	}
}

message OutMsg {
	oneof Message {
		ConnInfo info=1;
		Data data = 2;
	}
}

message Entry {
bytes topic=1;
bytes payload=2;
}

message Query {
bytes topic=1;
int32 limit=2;
}

message Sub {
bytes topic=1;
}

message Pub {
bytes topic=1;
bytes payload=2;
}

message Data {
bytes topic=1;
bytes content=2;
}